--- a/ch02/06.html
+++ b/ch02/06.html
@@ -5,7 +5,11 @@
     <title>webgl</title>
     <style>
         #myCanvas {
-            border: 1px solid purple;
+            border: 1px solid red;
+        }
+
+        body {
+            background: #ddd;
         }
     </style>
 </head>
@@ -49,8 +53,8 @@
         //获取uniform变量的存储位置
         const u_FragColor = gl.getUniformLocation(gl.program, 'u_FragColor');
 
-        canvas.onmousedown=function(e){
-            click(e,gl,canvas,a_Position,u_FragColor);
+        canvas.onmousedown = function (e) {
+            click(e, gl, canvas, a_Position, u_FragColor);
         }
         gl.clearColor(0, 0, 0, 1)
 
@@ -60,29 +64,29 @@
         console.log('浏览器不支持WebGL')
     }
 
-    const g_points=[];
-    const g_colors=[];
+    const g_points = [];
+    const g_colors = [];
 
-    function click(e,gl,canvas,a_Position,u_FragColor) {
+    function click(e, gl, canvas, a_Position, u_FragColor) {
 
-        let x=e.clientX;
-        let y=e.clientY;
-        let rect=e.target.getBoundingClientRect();
+        let x = e.clientX;
+        let y = e.clientY;
+        let rect = e.target.getBoundingClientRect();
 
-        x=((x-rect.left)-canvas.height/2)/(canvas.height/2);
-        y=(canvas.width/2-(y-rect.top))/(canvas.width/2);
+        x = ((x - rect.left) - canvas.height / 2) / (canvas.height / 2);
+        y = (canvas.width / 2 - (y - rect.top)) / (canvas.width / 2);
 
-        g_points.push([x,y])
+        g_points.push([x, y])
 
 
-        if(x>=0.0&&y>=0.0){
-            g_colors.push([1.0,0.0,0.0,1.0])//R
-        }else if(x<0.0&&y<0.0){
-            g_colors.push([0.0,1.0,0.0,1.0])//G
-        }else if(x>=0.0&&y<0.0){
-            g_colors.push([0.0,0.0,1.0,1.0])//B
-        }else{
-            g_colors.push([1.0,1.0,1.0,1.0])//W
+        if (x >= 0.0 && y >= 0.0) {
+            g_colors.push([1.0, 0.0, 0.0, 1.0])//R
+        } else if (x < 0.0 && y < 0.0) {
+            g_colors.push([0.0, 1.0, 0.0, 1.0])//G
+        } else if (x >= 0.0 && y < 0.0) {
+            g_colors.push([0.0, 0.0, 1.0, 1.0])//B
+        } else {
+            g_colors.push([1.0, 1.0, 1.0, 1.0])//W
         }
 
 
@@ -90,15 +94,15 @@
 
         let len = g_points.length
 
-        for(let i=0;i<len;i++){
+        for (let i = 0; i < len; i++) {
 
             // 传入坐标
-            gl.vertexAttrib3f(a_Position,g_points[i][0],g_points[i][1],0.0);
+            gl.vertexAttrib3f(a_Position, g_points[i][0], g_points[i][1], 0.0);
 
             //传入颜色
-            gl.uniform4f(u_FragColor,g_colors[i][0],g_colors[i][1],g_colors[i][2],g_colors[i][3])
+            gl.uniform4f(u_FragColor, g_colors[i][0], g_colors[i][1], g_colors[i][2], g_colors[i][3])
 
-            gl.drawArrays(gl.POINTS,0,1);
+            gl.drawArrays(gl.POINTS, 0, 1);
         }
 
     }
