--- a/ch03/01.html
+++ b/ch03/01.html
@@ -36,50 +36,44 @@
     if (gl) {
         initShaders(gl, VSHADER_SOURCE, FSHADER_SOURCE)//cuon-utils.js
 
-        // 获取attribute变量的存储位置
-        /*
-        * gl.getAttribLocation(program,name)
-        * program: 程序对象，包含点着色器和片元着色器的着色器程序对象；
-        * name：想要获取其存储地址的attribute变量的名称；
-        * */
-        const a_Position = gl.getAttribLocation(gl.program, 'a_Position');
+        let n = initVertexBuffers(gl)
+        console.log(n);
 
-        canvas.onmousedown = function (e) {
-            click(e, gl, canvas, a_Position);
-        }
+
         gl.clearColor(0, 0, 0, 1)
 
         gl.clear(gl.COLOR_BUFFER_BIT);
+
+        gl.drawArrays(gl.POINTS, 0, n);//画n个点
 
     } else {
         console.log('浏览器不支持WebGL')
     }
 
-    const g_points = [];
+    function initVertexBuffers(gl) {
+        const vertices = new Float32Array([
+            0.0, 0.5, -0.5, -0.5, 0.5, -0.5
+        ])
+        let n = 3;
 
-    function click(e, gl, canvas, a_Position) {
+        // 创建缓冲区对象
+        const vertexBuffer = gl.createBuffer();
 
-        let x = e.clientX;
-        let y = e.clientY;
-        let rect = e.target.getBoundingClientRect();
+        // 将缓冲区对象绑定到目标
+        gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer);
 
-        x = ((x - rect.left) - canvas.height / 2) / (canvas.height / 2);
-        y = (canvas.width / 2 - (y - rect.top)) / (canvas.width / 2);
+        // 向缓冲区对象写入数据
+        gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
 
-        g_points.push(x)
-        g_points.push(y)
-        console.log(x, y)
+        const a_Position = gl.getAttribLocation(gl.program, 'a_Position');
 
-        gl.clear(gl.COLOR_BUFFER_BIT);
+        // 将缓冲区对象分配给a_Position
+        gl.vertexAttribPointer(a_Position, 2, gl.FLOAT, false, 0, 0);
 
-        let len = g_points.length
+        // 连接a_Position变量与分配给它的缓冲区对象
+        gl.enableVertexAttribArray(a_Position);
 
-        for (let i = 0; i < len; i += 2) {
-
-            gl.vertexAttrib3f(a_Position, g_points[i], g_points[i + 1], 0.0);
-
-            gl.drawArrays(gl.POINTS, 0, 1);
-        }
+        return n;
 
     }
 
