--- a/ch03/02.html
+++ b/ch03/02.html
@@ -44,7 +44,13 @@
 
         gl.clear(gl.COLOR_BUFFER_BIT);
 
-        gl.drawArrays(gl.POINTS, 0, n);//从缓冲区第0个点开始，画n个点
+        // gl.drawArrays(gl.POINTS, 0, n);//点
+        // gl.drawArrays(gl.LINES, 0, n);//线段
+        // gl.drawArrays(gl.LINE_STRIP, 0, n);//线条
+        // gl.drawArrays(gl.LINE_LOOP, 0, n);//回路
+        gl.drawArrays(gl.TRIANGLES, 0, n);//三角形
+        // gl.drawArrays(gl.TRIANGLE_STRIP, 0, n);//三角带
+        // gl.drawArrays(gl.TRIANGLE_FAN, 0, n);//三角扇
 
     } else {
         console.log('浏览器不支持WebGL')
